--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '*/30 * * * *' # every 30 minutes
+    - cron: '0 0 * * *'
   workflow_dispatch: # on button click
 
 jobs:
@@ -16,3 +16,9 @@ jobs:
           owner: lgcxc
           base: main
           head: main
+          
+      - name: Check for Failure
+        if: failure()
+        run: |
+            echo "No commits"
+            exit 0
